i forgot message with my css commit, so the commit didn't happen. This commits is for css and js submissions

--- a/project-directory/index.html
+++ b/project-directory/index.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quiz All Aaron</title>
-        <link rel='stylesheets' type ="text/css" href = reset.css>
-        <link rel='stylesheets' type ="text/css" href = style.css>
+        <title>Quiz All About Aaron</title>
+
+        <link rel='stylesheet' href='css/reset.css'>
+        <link rel='stylesheet' href = 'css/style.css'>
     </head>
     <body>
       <h1 id=mytitle>Quiz All About ME! </h1> <!-- Title of the Page-->
+<br>
+<br>
+<br>
+<br>
+      <h2><span class= QandA>Question One:</span> My name is Aaron Blake Ferris. <br> 
+      <span class = YorN>Is this true? Yes or no? </span> </h2> <!-- First question-->
+      <br>
+      <p><span class= QandA>Answer:</span> Yes it is.</p>
+      <br>
+      <br>
 
-      <h2><span class= QandA>Question One:</span> My name is Aaron Blake Ferris. <span class = YorN>Yes or no? </span> </h2> <!-- First question-->
-      <p><span class= QandA>Answer:</span> Yes</p>
-      
-      <h2><span class = QandA>Question Two:</span> I am the oldest of three children. <span class = YorN>Yes or no? </span> </h2><!-- Second question-->
-      <p> <span class= QandA>Answer:</span> No. I am the youngest of three</p>
+      <h2><span class = QandA>Question Two:</span> I am the oldest of three children. <br> 
+        <span class = YorN>Is this true? Yes or no? </span> </h2><!-- Second question-->
+      <br>
+      <p> <span class= QandA>Answer:</span> No. I am the youngest of three.</p>
+      <br>
+      <br>
 
-      <h2><span class = QandA>Question Three:</span> My two older brothers are named Drew and Reed. As my father and grandmother are both teachers, I was almost named 'Wright'. <span class = YorN>Yes or no? </span> </h2><!-- Third question-->
+      <h2><span class = QandA>Question Three:</span> My two older brothers are named Drew and Reed. As my father and grandmother are both teachers, I was almost named 'Wright'. <br> 
+      <span class = YorN>Is this true? Yes or no? </span> </h2><!-- Third question-->
+      <br>
       <p> <span class= QandA>Answer:</span> Yes. Thank goodness they decided otherwise, which kept me from much childhood teasing. Now <span class=proper>Key and Peel</span> have opened that can of worms for my name</p>
 
-      <h2><span class = QandA>Question Four:</span> I have played ultimate at a competitive level, known as club. I also currently enjoy giving back to the ultimate community by coaching teams my alma mater at <span class=proper>Eckstien Middle School</span>. <span class = YorN>Yes or no? </span></h2><!-- Fourth question-->
+      <br>
+      <br>
+      <h2><span class = QandA>Question Four:</span> I have played ultimate at a competitive level, known as club. I also currently enjoy giving back to the ultimate community by coaching teams my at alma mater <span class=proper>Eckstein Middle School</span>. <br> 
+      <span class = YorN>Is this true? Yes or no?</span> </h2><!-- Fourth question-->
+      <br>
       <p> <span class= QandA>Answer:</span> No. Unfortunatly life gets in the way. Codefellows is busy enough that I do not have the time to commit to something like that during the school day. You should know that!</p>
 
-      <h2><span class = QandA>Question Five:</span> I play <span class = proper>Dungeons and Dragons</span>! I prefer to play hack and slash fighting characters to make things as simple as possible. <span class = YorN>Yes or no? </span></h2><!-- Second question-->
+      <br>
+      <br>
+      <h2><span class = QandA>Question Five:</span> I play <span class = proper>Dungeons and Dragons</span>! I prefer to play hack and slash fighting characters to make things as simple as possible.  <br> 
+       <span class = YorN>Is this true? Yes or no? </span>
+      </h2> <!-- Fifth question-->
+      <br>
       <p> <span class= QandA>Answer:</span> No. If you know anything about me, I am a glutton for punishment! I enjoy playing magic-users, as knowing and managing your spells is often more complex and difficult. However dumb characters can be played in VERY fun ways.</p>
 
+    <script src= 'js/app.js'></script>
     </body>
 </html>
