extra stuff converting html spacing to css

--- a/project-directory/index.html
+++ b/project-directory/index.html
@@ -24,12 +24,12 @@
       <h2 id="bio"> Quick Bio</h2>
       <p id="biotext">
         Hey there folks. I was born in 1991 in Seattle, Washington, where I have lived most of my life. In first grade, my best friend said "I want to be an engineer", and I said "Cool I'll be one with you" and my life went from there. I have always been mathematically minded, however I have always been a people person. I was so friendly, my grandmother was afraid I would be kidnapped as a child. Somehow I managed to grow up, and through highschool I took a number of technology courses, including CAD, computer integrated manufacturing, digital electronics (computer logic), and web design.
-        <br> 
-        <br>
+      </p>
+      <p id="biotext">
         <!-- USE <p> instead and padding instead of BR -->
         After that, I proceeded to University of Portland, where I studied mechanical engineering. I had many interests, including biomechanics, however upon completion of my degree, I was unsure of if I wanted to follow the path of mechanical engineering. My senior project was so much time spent in front of a computer and crunching numbers, so I decided to go out into the world and discover what I wanted to do. After looking around, I got a retail job, and worked that for a number of years. I progressed quickly from a cashier to a senior sales associate, and eventually to a manager. I loved helping people in the store, but also helping the other associates improve and grow personally in social skills and how to sell products and themselves. As I grew, I looked at the path of my progression, and realized that the life of a store manager nor the life of anyone higher up in the food chain is not the life I wanted, constantly on call and very little return. I wanted to return to my roots of engineering, however five years makes it hard to simply jump back in.
-        <br> 
-        <br>
+       </p>
+       <p id="biotext">
         My oldest brother had been bothering me about doing this coding thing he had gone through. He went from having a bussing job with a math Bachelors from UW to getting employed coding, and has had a significant increase in quality of life. After talking about it with close friends, I decided that this was the path for me! I am currently working on becoming a software engineer and web developer, to use my skills and knowledge for the powers of good!
       </p>
 
