--- a/project-directory/index.html
+++ b/project-directory/index.html
@@ -65,47 +65,50 @@
       <h2>My Philosiphy about Engineers</h2>
       <p>Engineers help people with problems, often ones they don't think about or know about yet. One of my strengths is working in cooperation with teams to cultivate strong internal and interconnected communities. As an engineers are driven by the ideal of the betterment of society by means of development of tools for those who are technically savvy and those who are occasional users. </p>
       <br> <br>
+
+    
+
       <h2> Quiz questions and responses</h2>
       <h3><span class= "QandA">Question One:</span> My name is Aaron Blake Ferris. <br> 
-      <span class=YorN>Is this true? Yes or no? </span> </h3> <!-- First question-->
+      <span class=YorN>Is this true? Yes or no? </span> </h3> 
       <br>
       <p class="answer"> <span class= "QandA">Answer:</span> Yes it is.</p>
       <br>
       <br>
 
       <h3><span class="QandA">Question Two:</span> I am the oldest of three children. <br> 
-        <span class=YorN>Is this true? Yes or no? </span> </h3><!-- Second question-->
+        <span class=YorN>Is this true? Yes or no? </span> </h3>
       <br>
       <p class="answer"> <span class= "QandA">Answer:</span> No. I am the youngest of three.</p>
       <br>
       <br>
 
       <h3><span class="QandA">Question Three:</span> My two older brothers are named Drew and Reed. As my father and grandmother are both teachers, I was almost named 'Wright'. <br> 
-      <span class=YorN>Is this true? Yes or no? </span> </h3><!-- Third question-->
+      <span class=YorN>Is this true? Yes or no? </span> </h3>
       <br>
       <p class="answer"> <span class= "QandA">Answer:</span> Yes. Thank goodness they decided otherwise, which kept me from much childhood teasing. Now <span class="proper">Key and Peel</span> have opened that can of worms for my name</p>
 
       <br>
       <br>
       <h3><span class="QandA">Question Four:</span> I have played ultimate at a competitive level, known as club. I also currently enjoy giving back to the ultimate community by coaching teams my at alma mater <span class=proper>Eckstein Middle School</span>. <br> 
-      <span class=YorN>Is this true? Yes or no?</span> </h3><!-- Fourth question-->
+      <span class=YorN>Is this true? Yes or no?</span> </h3>
       <br>
       <p class="answer"> <span class= "QandA">Answer:</span> No. Unfortunatly life gets in the way. Codefellows is busy enough that I do not have the time to commit to something like that during the school day. You should know that!</p>
 
       <br>
       <br>
       <h3><span class="QandA">Question Five:</span> I play <span class="proper">Dungeons and Dragons</span>! I prefer to play hack and slash fighting characters to make things as simple as possible.  <br> 
-       <span class=YorN>Is this true? Yes or no? </span> </h3> <!-- Fifth question-->
+       <span class=YorN>Is this true? Yes or no? </span> </h3>
       <br>
       <p class="answer"> <span class= "QandA">Answer:</span> No. If you know anything about me, I am a glutton for punishment! I enjoy playing magic-users, as knowing and managing your spells is often more complex and difficult. However dumb characters can be played in VERY fun ways.</p>
       <br>
       <br>
-      <h3><span class="QandA">Question Six:</span> How old am I?  </h3> <!-- Sixth question-->
+      <h3><span class="QandA">Question Six:</span> How old am I?  </h3>
       <br>
       <p class="answer"> <span class= "QandA">Answer:</span> I am currently 27, born in 1991. </p>
       <br>
       <br>
-      <h3><span class="QandA">Question Seven:</span> What are the parts of my favorite meal that my parents make? </h3> <!-- Seventh Question question-->
+      <h3><span class="QandA">Question Seven:</span> What are the parts of my favorite meal that my parents make? </h3>
       <br>
       <p class="answer"> <span class= "QandA">Answer:</span> Pesto pasta, Flanksteak, Garlic Bread, Red Wine.</p>
 
