--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
      <title> All About Aaron</title>
     <link rel="stylesheet" href='css/reset.css'>
     <link rel="stylesheet" href='css/style.css'>
-
   </head>
 
     <body>
@@ -110,7 +109,7 @@
       
       <p class="answer"> <span class= "QandA">Answer:</span> Pesto pasta, Flanksteak, Garlic Bread, Red Wine.</p>
 
-    <!-- <script src= "js/app.js"></script> -->
+    <script src= "js/app.js"></script>
 
     </body>
 
